# SIDpy

./: .gitignore  .pre-commit-config.yaml  LICENSE.rst  MANIFEST.in  README.md  README.rst  archiver.py  azure-pipelines.yml  backend.py  config.ini  geographic_midpoint.py  processing_script.bat  pyproject.toml  read_config.py  requirments.txt  setup.cfg  setup.py  supersid_archiver.py  supersid_config.py  supersid_run.py  tox.ini  transmitter_dict.py  vlf_transmitter_dict.py  vlfclient.py
config/: config.ini
docs/: conf.py  index.rst  quickstart.rst  transmitter.rst
docs/code_ref/: archiver.rst  geographic_mipoint.rst  index.rst  logger.rst  run.rst  tests.rst  vlfclient.rst
sidpy/: archiver.py  logger.py  run.py  vlfclient.py
sidpy/automation/: processing_script.bat
sidpy/config/: config.py
sidpy/tests/: test_archiver.py  test_example.py  test_geographic_midpoint.py  test_vlfclient.py
sidpy/tests/data/: 20210703_000000_NAA_S-0055.csv  Dunsink_NAA_2021-07-10_000000.csv  __init__.py  xrays-3-day.json
supersid/: archiver.py  geographic_midpoint.py  processing_script.bat  run.py  supersid_archiver.py  supersid_config.ini  supersid_run.py  vlfclient.py
supersid/config/: __init__.py  config.py  read_config.py
supersid/geographic_midpoint/: geographic_midpoint.py
supersid/tests/: test_example.py
supersid/transmitters/: vlf_transmitters.py
