[metadata]
name = SIDpy
author = Oscar OHara
author_email = oharao@tcd.ie
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/TCDSolar/SIDpy
description = Collection of python scripts which can be used to process the observational data from the Stanford SID & SuperSID.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    matplotlib>=3.2.2
    pandas>=1.0.5
    pathlib>=1.0.1
    numpy>=1.19.0
    scipy>=1.5.0
    sunpy>=2.0.3
    astral>=2.2

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier
    sunpy-sphinx-theme

[options.package_data]
sidpy = data/*

[tool:pytest]
testpaths = "sidpy" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  sidpy/_sunpy_init*
  sidpy/conftest.py
  sidpy/*setup_package*
  sidpy/tests/*
  sidpy/*/tests/*
  sidpy/extern/*
  sidpy/version*
  */sidpy/_sunpy_init*
  */sidpy/conftest.py
  */sidpy/*setup_package*
  */sidpy/tests/*
  */sidpy/*/tests/*
  */sidpy/extern/*
  */sidpy/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
